# powerha-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/powerha_cli/: __init__.py  client.py  config.py  main.py
src/powerha_copilot_cli/: __init__.py  client.py  config.py  main.py
